--- a/scb-frontend/public/index.html
+++ b/scb-frontend/public/index.html
@@ -15,12 +15,18 @@
   integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
   crossorigin="anonymous"
 />
+<meta name="description" content="The 21st National OOO Symposium hosted by SCB Dental College and Hospital in the Silver City of India. Organized under the patronage of the Indian Academy of Oral Medicine and Radiology (IAOMR) in collaboration with AOMSI and IAOMP.">
+  <meta name="keywords" content="21st National OOO Symposium, SCB Dental College, Silver City of India, Indian Academy of Oral Medicine and Radiology, IAOMR, AOMSI, IAOMP, Oral Medicine, Radiology, Maxillofacial Surgeons, Maxillofacial Pathologists, Dental Conference">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta property="og:title" content="21st National OOO Symposium - SCB Dental College and Hospital">
+    <meta property="og:description" content="Join us for the 21st National OOO Symposium hosted by SCB Dental College and Hospital in the Silver City of India. Organized under the patronage of IAOMR in collaboration with AOMSI and IAOMP.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ooocuttack2024.com">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
